[gd_scene load_steps=10 format=4 uid="uid://cutrmf8sdem20"]

[ext_resource type="Texture2D" uid="uid://ckux407qistk4" path="res://Sprites/PolyBlocks/Colors.png" id="1_72e8q"]
[ext_resource type="Script" uid="uid://148uis101sjc" path="res://Scripts/gameplay.gd" id="1_d2op2"]
[ext_resource type="Texture2D" uid="uid://cbgumaujn7u0e" path="res://Sprites/PolyBlocks/Playfield-Narrow.png" id="3_d2op2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d2op2"]
texture = ExtResource("1_72e8q")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0

[sub_resource type="TileSet" id="TileSet_0rdsr"]
tile_size = Vector2i(40, 40)
sources/1 = SubResource("TileSetAtlasSource_d2op2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ipu61"]
texture = ExtResource("1_72e8q")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ygxny"]
tile_size = Vector2i(40, 40)
sources/1 = SubResource("TileSetAtlasSource_ipu61")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0rdsr"]
texture = ExtResource("3_d2op2")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1dl7g"]
tile_size = Vector2i(40, 40)
sources/0 = SubResource("TileSetAtlasSource_0rdsr")

[node name="MainGame" type="Node2D"]
process_mode = 1
script = ExtResource("1_d2op2")

[node name="Pieces" type="TileMapLayer" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(760, 0)
tile_set = SubResource("TileSet_0rdsr")

[node name="LockedPieces" type="TileMapLayer" parent="."]
light_mask = 4
visibility_layer = 4
position = Vector2(760, 0)
tile_set = SubResource("TileSet_ygxny")

[node name="Playfield" type="TileMapLayer" parent="."]
show_behind_parent = true
light_mask = 8
visibility_layer = 8
position = Vector2(720, 0)
tile_map_data = PackedByteArray("AAAAAAMAAAAAAAAAAAABAAMAAAABAAAAAAACAAMAAAABAAAAAAADAAMAAAABAAAAAAAEAAMAAAABAAAAAAAFAAMAAAABAAAAAAAGAAMAAAABAAAAAAAHAAMAAAABAAAAAAAIAAMAAAABAAAAAAAJAAMAAAABAAAAAAAKAAMAAAABAAAAAAALAAMAAAACAAAAAAAAAAQAAAAJAAAAAAAAAAUAAAAJAAAAAAAAAAYAAAAJAAAAAAAAAAcAAAAJAAAAAAAAAAgAAAAJAAAAAAALAAQAAAALAAAAAAALAAUAAAALAAAAAAALAAYAAAALAAAAAAALAAcAAAALAAAAAAALAAgAAAALAAAAAAAAAAkAAAADAAAAAAALAAkAAAAFAAAAAAAAAAoAAAAMAAAAAAAAAAsAAAAMAAAAAAAAAAwAAAAMAAAAAAAAAA0AAAAMAAAAAAAAAA4AAAAMAAAAAAAAAA8AAAAMAAAAAAAAABAAAAAMAAAAAAAAABEAAAAMAAAAAAAAABIAAAAMAAAAAAAAABMAAAAMAAAAAAAAABQAAAAMAAAAAAAAABUAAAAMAAAAAAAAABYAAAAMAAAAAAAAABcAAAAMAAAAAAAAABgAAAAGAAAAAAALABgAAAAIAAAAAAABABgAAAAHAAAAAAACABgAAAAHAAAAAAADABgAAAAHAAAAAAAEABgAAAAHAAAAAAAFABgAAAAHAAAAAAAGABgAAAAHAAAAAAAHABgAAAAHAAAAAAAIABgAAAAHAAAAAAAJABgAAAAHAAAAAAAKABgAAAAHAAAAAAALAAoAAAAOAAAAAAALAAsAAAAOAAAAAAALAAwAAAAOAAAAAAALAA0AAAAOAAAAAAALAA4AAAAOAAAAAAALAA8AAAAOAAAAAAALABAAAAAOAAAAAAALABEAAAAOAAAAAAALABIAAAAOAAAAAAALABMAAAAOAAAAAAALABQAAAAOAAAAAAALABUAAAAOAAAAAAALABYAAAAOAAAAAAALABcAAAAOAAAAAAANAAMAAAANAAAAAAANAAQAAAANAAAAAAANAAUAAAANAAAAAAANAAYAAAANAAAAAAANAAcAAAANAAAAAAANAAkAAAANAAAAAAANAAoAAAANAAAAAAANAAsAAAANAAAAAAANAAwAAAANAAAAAAANAA4AAAANAAAAAAANAA8AAAANAAAAAAANABAAAAANAAAAAAANABEAAAANAAAAAAAOABIAAAANAAAAAAAPABIAAAANAAAAAAAQABIAAAANAAAAAAARABIAAAANAAAAAAASABEAAAANAAAAAAASABAAAAANAAAAAAASAA8AAAANAAAAAAASAA4AAAANAAAAAAASAAwAAAANAAAAAAASAAsAAAANAAAAAAASAAoAAAANAAAAAAASAAkAAAANAAAAAAASAAQAAAANAAAAAAASAAUAAAANAAAAAAASAAYAAAANAAAAAAASAAcAAAANAAAAAAAOAAMAAAANAAAAAAAPAAMAAAANAAAAAAAQAAMAAAANAAAAAAARAAMAAAANAAAAAAASAAMAAAANAAAAAAANAAgAAAANAAAAAAASAAgAAAANAAAAAAASAA0AAAANAAAAAAANAA0AAAANAAAAAAANABIAAAANAAAAAAASABIAAAANAAAAAAAOAAgAAAANAAAAAAAPAAgAAAANAAAAAAAQAAgAAAANAAAAAAARAAgAAAANAAAAAAAOAA0AAAANAAAAAAAPAA0AAAANAAAAAAAQAA0AAAANAAAAAAARAA0AAAANAAAAAAD+/wMAAAANAAAAAAD9/wMAAAANAAAAAAD8/wMAAAANAAAAAAD7/wMAAAANAAAAAAD6/wMAAAANAAAAAAD5/wMAAAANAAAAAAD5/wQAAAANAAAAAAD5/wUAAAANAAAAAAD5/wYAAAANAAAAAAD5/wcAAAANAAAAAAD5/wgAAAANAAAAAAD6/wgAAAANAAAAAAD7/wgAAAANAAAAAAD8/wgAAAANAAAAAAD9/wgAAAANAAAAAAD+/wgAAAANAAAAAAD+/wcAAAANAAAAAAD+/wYAAAANAAAAAAD+/wUAAAANAAAAAAD+/wQAAAANAAAAAAABAAQAAAAKAAAAAAACAAQAAAAKAAAAAAADAAQAAAAKAAAAAAAEAAQAAAAKAAAAAAAFAAQAAAAKAAAAAAAGAAQAAAAKAAAAAAAHAAQAAAAKAAAAAAAIAAQAAAAKAAAAAAAJAAQAAAAKAAAAAAAKAAQAAAAKAAAAAAAKAAUAAAAKAAAAAAAJAAUAAAAKAAAAAAAIAAUAAAAKAAAAAAAHAAUAAAAKAAAAAAAGAAUAAAAKAAAAAAAFAAUAAAAKAAAAAAAEAAUAAAAKAAAAAAADAAUAAAAKAAAAAAACAAUAAAAKAAAAAAABAAUAAAAKAAAAAAABAAYAAAAKAAAAAAACAAYAAAAKAAAAAAADAAYAAAAKAAAAAAAEAAYAAAAKAAAAAAAFAAYAAAAKAAAAAAAGAAYAAAAKAAAAAAAHAAYAAAAKAAAAAAAIAAYAAAAKAAAAAAAJAAYAAAAKAAAAAAAKAAYAAAAKAAAAAAAKAAcAAAAKAAAAAAAJAAcAAAAKAAAAAAAIAAcAAAAKAAAAAAAHAAcAAAAKAAAAAAAGAAcAAAAKAAAAAAAFAAcAAAAKAAAAAAAEAAcAAAAKAAAAAAADAAcAAAAKAAAAAAACAAcAAAAKAAAAAAABAAcAAAAKAAAAAAABAAgAAAAKAAAAAAACAAgAAAAKAAAAAAADAAgAAAAKAAAAAAAEAAgAAAAKAAAAAAAFAAgAAAAKAAAAAAAGAAgAAAAKAAAAAAAHAAgAAAAKAAAAAAAIAAgAAAAKAAAAAAAJAAgAAAAKAAAAAAAKAAgAAAAKAAAAAAABAAkAAAAEAAAAAAACAAkAAAAEAAAAAAADAAkAAAAEAAAAAAAEAAkAAAAEAAAAAAAFAAkAAAAEAAAAAAAGAAkAAAAEAAAAAAAHAAkAAAAEAAAAAAAIAAkAAAAEAAAAAAAJAAkAAAAEAAAAAAAKAAkAAAAEAAAAAAABAAoAAAANAAAAAAACAAoAAAANAAAAAAADAAoAAAANAAAAAAAEAAoAAAANAAAAAAAFAAoAAAANAAAAAAAGAAoAAAANAAAAAAAHAAoAAAANAAAAAAAIAAoAAAANAAAAAAAJAAoAAAANAAAAAAAKAAoAAAANAAAAAAAKAAsAAAANAAAAAAAJAAsAAAANAAAAAAAIAAsAAAANAAAAAAAHAAsAAAANAAAAAAAGAAsAAAANAAAAAAAFAAsAAAANAAAAAAAEAAsAAAANAAAAAAADAAsAAAANAAAAAAACAAsAAAANAAAAAAABAAsAAAANAAAAAAABAAwAAAANAAAAAAACAAwAAAANAAAAAAADAAwAAAANAAAAAAAEAAwAAAANAAAAAAAFAAwAAAANAAAAAAAGAAwAAAANAAAAAAAHAAwAAAANAAAAAAAIAAwAAAANAAAAAAAJAAwAAAANAAAAAAAKAAwAAAANAAAAAAAKAA0AAAANAAAAAAAJAA0AAAANAAAAAAAIAA0AAAANAAAAAAAHAA0AAAANAAAAAAAGAA0AAAANAAAAAAAFAA0AAAANAAAAAAAEAA0AAAANAAAAAAADAA0AAAANAAAAAAACAA0AAAANAAAAAAABAA0AAAANAAAAAAABAA4AAAANAAAAAAACAA4AAAANAAAAAAADAA4AAAANAAAAAAAEAA4AAAANAAAAAAAFAA4AAAANAAAAAAAGAA4AAAANAAAAAAAHAA4AAAANAAAAAAAIAA4AAAANAAAAAAAJAA4AAAANAAAAAAAKAA4AAAANAAAAAAAKAA8AAAANAAAAAAAJAA8AAAANAAAAAAAIAA8AAAANAAAAAAAHAA8AAAANAAAAAAAGAA8AAAANAAAAAAAFAA8AAAANAAAAAAAEAA8AAAANAAAAAAADAA8AAAANAAAAAAACAA8AAAANAAAAAAABAA8AAAANAAAAAAABABAAAAANAAAAAAACABAAAAANAAAAAAADABAAAAANAAAAAAAEABAAAAANAAAAAAAFABAAAAANAAAAAAAGABAAAAANAAAAAAAHABAAAAANAAAAAAAIABAAAAANAAAAAAAJABAAAAANAAAAAAAKABAAAAANAAAAAAAKABEAAAANAAAAAAAJABEAAAANAAAAAAAIABEAAAANAAAAAAAHABEAAAANAAAAAAAGABEAAAANAAAAAAAFABEAAAANAAAAAAAEABEAAAANAAAAAAADABEAAAANAAAAAAACABEAAAANAAAAAAABABEAAAANAAAAAAABABIAAAANAAAAAAACABIAAAANAAAAAAADABIAAAANAAAAAAAEABIAAAANAAAAAAAFABIAAAANAAAAAAAGABIAAAANAAAAAAAHABIAAAANAAAAAAAIABIAAAANAAAAAAAJABIAAAANAAAAAAAKABIAAAANAAAAAAAKABMAAAANAAAAAAAJABMAAAANAAAAAAAIABMAAAANAAAAAAAHABMAAAANAAAAAAAGABMAAAANAAAAAAAFABMAAAANAAAAAAAEABMAAAANAAAAAAADABMAAAANAAAAAAACABMAAAANAAAAAAABABMAAAANAAAAAAABABQAAAANAAAAAAACABQAAAANAAAAAAADABQAAAANAAAAAAAEABQAAAANAAAAAAAFABQAAAANAAAAAAAGABQAAAANAAAAAAAHABQAAAANAAAAAAAIABQAAAANAAAAAAAJABQAAAANAAAAAAAKABQAAAANAAAAAAAKABUAAAANAAAAAAAJABUAAAANAAAAAAAIABUAAAANAAAAAAAHABUAAAANAAAAAAAGABUAAAANAAAAAAAFABUAAAANAAAAAAAEABUAAAANAAAAAAADABUAAAANAAAAAAACABUAAAANAAAAAAABABUAAAANAAAAAAABABYAAAANAAAAAAACABYAAAANAAAAAAADABYAAAANAAAAAAAEABYAAAANAAAAAAAFABYAAAANAAAAAAAGABYAAAANAAAAAAAHABYAAAANAAAAAAAIABYAAAANAAAAAAAJABYAAAANAAAAAAAKABYAAAANAAAAAAAKABcAAAANAAAAAAAJABcAAAANAAAAAAAIABcAAAANAAAAAAAHABcAAAANAAAAAAAGABcAAAANAAAAAAAFABcAAAANAAAAAAAEABcAAAANAAAAAAADABcAAAANAAAAAAACABcAAAANAAAAAAABABcAAAANAAAAAAA=")
tile_set = SubResource("TileSet_1dl7g")

[node name="Stats" type="Label" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 1260.0
offset_top = 800.0
offset_right = 1500.0
offset_bottom = 846.0
theme_override_font_sizes/font_size = 25
text = "Score: 0000000"

[node name="HighScore" type="Label" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 1260.0
offset_top = 840.0
offset_right = 1560.0
offset_bottom = 886.0
theme_override_font_sizes/font_size = 25
text = "High score: 0000001"

[node name="Lines" type="Label" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 1260.0
offset_top = 880.0
offset_right = 1560.0
offset_bottom = 926.0
theme_override_font_sizes/font_size = 25
text = "Lines cleared: 000"

[node name="Level" type="Label" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 1260.0
offset_top = 920.0
offset_right = 1560.0
offset_bottom = 966.0
theme_override_font_sizes/font_size = 25
text = "Level: 01/50"

[node name="Controls" type="Label" parent="."]
offset_left = 20.0
offset_top = 260.0
offset_right = 400.0
offset_bottom = 800.0
theme_override_font_sizes/font_size = 24
text = "Controls:
A = Move piece left
S = Push down piece
D = Move piece right
<Space> = Hard Drop

<right> = Rotate clockwise
<left> = rotate counterclockwise

<esc> = Pause
<F11> = Fullscreen
Z = Show/hide this panel"
horizontal_alignment = 1

[node name="Hold" type="Label" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 512.0
offset_top = 64.0
offset_right = 608.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 25
text = "HOLD"
horizontal_alignment = 1

[node name="Next" type="Label" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 1280.0
offset_top = 72.0
offset_right = 1440.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 25
text = "NEXT QUEUE"
horizontal_alignment = 1

[node name="ScoreLog" type="Label" parent="."]
light_mask = 2
visibility_layer = 2
offset_left = 496.0
offset_top = 376.0
offset_right = 619.0
offset_bottom = 419.0
theme_override_font_sizes/font_size = 25
text = "Score Log"

[node name="Tutorial" type="AcceptDialog" parent="."]
dialog_text = "How to play -- Controls:
W = Hold piece [WIP]
A = Move piece left
S = Push down piece
D = Move piece right
<Space> = Hard Drop

<right> = Rotate clockwise
<left> = rotate counterclockwise

<esc> = Pause
<F11> = Fullscreen"

[node name="Pause" type="ConfirmationDialog" parent="."]
process_mode = 2
auto_translate_mode = 1
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
title = "PAUSED"
initial_position = 1
size = Vector2i(800, 320)
max_size = Vector2i(1920, 1080)
content_scale_aspect = 1
content_scale_factor = 2.0
ok_button_text = "Quit"
dialog_text = "NOTE: you will forfeit all progress made with this game if you quit!"
dialog_autowrap = true
cancel_button_text = "Continue"

[node name="GameOver" type="Panel" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Game over" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 720.0
offset_top = 480.0
offset_right = 1200.0
offset_bottom = 680.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "GAME OVER
Click anywhere to exit."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
visible = false
top_level = true
offset_right = 1920.0
offset_bottom = 1080.0

[node name="YouWin" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 220.0
offset_top = 420.0
offset_right = 1701.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 40
text = "CONGRATULATIONS
YOU WIN!
You have cleared 640 lines and endured INSANE fall speeds to reach this point.
A special trophy awaits you. Click to reveal it!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="canceled" from="Pause" to="." method="_on_pause_canceled"]
[connection signal="confirmed" from="Pause" to="." method="_on_pause_confirmed"]
[connection signal="gui_input" from="GameOver" to="." method="_on_game_over_gui_input"]
