[gd_scene load_steps=14 format=4 uid="uid://cutrmf8sdem20"]

[ext_resource type="Script" path="res://Scripts/gameplay.gd" id="1_ecigw"]
[ext_resource type="Texture2D" uid="uid://cy7d6wyulry4y" path="res://Sprites/PlayfieldCorrect.png" id="1_r5bxt"]
[ext_resource type="PackedScene" uid="uid://b4a0ffexnpl5p" path="res://i_polyblock.tscn" id="3_t43ld"]
[ext_resource type="PackedScene" uid="uid://d1gp6x7f2pm5m" path="res://z_polyblock.tscn" id="4_gur0n"]
[ext_resource type="PackedScene" uid="uid://dowdbofyu860e" path="res://duo_block.tscn" id="6_ko2oj"]
[ext_resource type="PackedScene" uid="uid://ca1xy0me5tb1f" path="res://j_polyblock.tscn" id="7_sv651"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_377yp"]
texture = ExtResource("1_r5bxt")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0

[sub_resource type="TileSet" id="TileSet_1dl7g"]
tile_size = Vector2i(40, 40)
sources/1 = SubResource("TileSetAtlasSource_377yp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbctr"]
size = Vector2(160, 160)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rfh87"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_bj5b2"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5yxav"]
distance = -201.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_otkg8"]
distance = -12.0

[node name="MainGame" type="Node2D"]
process_mode = 1
script = ExtResource("1_ecigw")

[node name="Playfield" type="TileMapLayer" parent="."]
position = Vector2(720, 0)
tile_map_data = PackedByteArray("AAAAAAMAAQAAAAAAAAABAAMAAQABAAAAAAACAAMAAQABAAAAAAADAAMAAQABAAAAAAAEAAMAAQABAAAAAAAFAAMAAQABAAAAAAAGAAMAAQABAAAAAAAHAAMAAQABAAAAAAAIAAMAAQABAAAAAAAJAAMAAQABAAAAAAAKAAMAAQABAAAAAAALAAMAAQALAAAAAAAAAAQAAQAAAAEAAAAAAAUAAQAAAAEAAAAAAAYAAQAAAAEAAAAAAAcAAQAAAAEAAAAAAAgAAQAAAAEAAAALAAQAAQALAAEAAAALAAUAAQALAAEAAAALAAYAAQALAAEAAAALAAcAAQALAAEAAAALAAgAAQALAAEAAAAAAAkAAQAAAAYAAAALAAkAAQALAAYAAAAAAAoAAQAAAAcAAAAAAAsAAQAAAAcAAAAAAAwAAQAAAAcAAAAAAA0AAQAAAAcAAAAAAA4AAQAAAAcAAAAAAA8AAQAAAAcAAAAAABAAAQAAAAcAAAAAABEAAQAAAAcAAAAAABIAAQAAAAcAAAAAABMAAQAAAAcAAAAAABQAAQAAAAcAAAAAABUAAQAAAAcAAAAAABYAAQAAAAcAAAAAABcAAQAAAAcAAAAAABgAAQAAABUAAAALABgAAQALABUAAAABABgAAQABABUAAAACABgAAQABABUAAAADABgAAQABABUAAAAEABgAAQABABUAAAAFABgAAQABABUAAAAGABgAAQABABUAAAAHABgAAQABABUAAAAIABgAAQABABUAAAAJABgAAQABABUAAAAKABgAAQABABUAAAALAAoAAQALABQAAAALAAsAAQALABQAAAALAAwAAQALABQAAAALAA0AAQALABQAAAALAA4AAQALABQAAAALAA8AAQALABQAAAALABAAAQALABQAAAALABEAAQALABQAAAALABIAAQALABQAAAALABMAAQALABQAAAALABQAAQALABQAAAALABUAAQALABQAAAALABYAAQALABQAAAALABcAAQALABQAAAANAAMAAQABAA8AAAANAAQAAQACAA8AAAANAAUAAQACAA8AAAANAAYAAQACAA8AAAANAAcAAQACAA8AAAANAAkAAQACAA8AAAANAAoAAQACAA8AAAANAAsAAQACAA8AAAANAAwAAQACAA8AAAANAA4AAQACAA8AAAANAA8AAQACAA8AAAANABAAAQACAA8AAAANABEAAQACAA8AAAAOABIAAQACAA8AAAAPABIAAQACAA8AAAAQABIAAQACAA8AAAARABIAAQACAA8AAAASABEAAQACAA8AAAASABAAAQACAA8AAAASAA8AAQACAA8AAAASAA4AAQACAA8AAAASAAwAAQACAA8AAAASAAsAAQACAA8AAAASAAoAAQACAA8AAAASAAkAAQACAA8AAAASAAQAAQACAA8AAAASAAUAAQACAA8AAAASAAYAAQACAA8AAAASAAcAAQACAA8AAAAOAAMAAQABAA8AAAAPAAMAAQABAA8AAAAQAAMAAQABAA8AAAARAAMAAQABAA8AAAASAAMAAQABAA8AAAANAAgAAQACAA8AAAASAAgAAQACAA8AAAASAA0AAQACAA8AAAANAA0AAQACAA8AAAANABIAAQACAA8AAAASABIAAQACAA8AAAAOAAgAAQACAA8AAAAPAAgAAQACAA8AAAAQAAgAAQACAA8AAAARAAgAAQACAA8AAAAOAA0AAQACAA8AAAAPAA0AAQACAA8AAAAQAA0AAQACAA8AAAARAA0AAQACAA8AAAD+/wMAAQACAA8AAAD9/wMAAQACAA8AAAD8/wMAAQACAA8AAAD7/wMAAQACAA8AAAD6/wMAAQACAA8AAAD5/wMAAQACAA8AAAD5/wQAAQACAA8AAAD5/wUAAQACAA8AAAD5/wYAAQACAA8AAAD5/wcAAQACAA8AAAD5/wgAAQACAA8AAAD6/wgAAQACAA8AAAD7/wgAAQACAA8AAAD8/wgAAQACAA8AAAD9/wgAAQACAA8AAAD+/wgAAQACAA8AAAD+/wcAAQACAA8AAAD+/wYAAQACAA8AAAD+/wUAAQACAA8AAAD+/wQAAQACAA8AAAABAAQAAQACAAQAAAACAAQAAQACAAQAAAADAAQAAQACAAQAAAAEAAQAAQACAAQAAAAFAAQAAQACAAQAAAAGAAQAAQACAAQAAAAHAAQAAQACAAQAAAAIAAQAAQACAAQAAAAJAAQAAQACAAQAAAAKAAQAAQACAAQAAAAKAAUAAQACAAQAAAAJAAUAAQACAAQAAAAIAAUAAQACAAQAAAAHAAUAAQACAAQAAAAGAAUAAQACAAQAAAAFAAUAAQACAAQAAAAEAAUAAQACAAQAAAADAAUAAQACAAQAAAACAAUAAQACAAQAAAABAAUAAQACAAQAAAABAAYAAQACAAQAAAACAAYAAQACAAQAAAADAAYAAQACAAQAAAAEAAYAAQACAAQAAAAFAAYAAQACAAQAAAAGAAYAAQACAAQAAAAHAAYAAQACAAQAAAAIAAYAAQACAAQAAAAJAAYAAQACAAQAAAAKAAYAAQACAAQAAAAKAAcAAQACAAQAAAAJAAcAAQACAAQAAAAIAAcAAQACAAQAAAAHAAcAAQACAAQAAAAGAAcAAQACAAQAAAAFAAcAAQACAAQAAAAEAAcAAQACAAQAAAADAAcAAQACAAQAAAACAAcAAQACAAQAAAABAAcAAQACAAQAAAABAAgAAQACAAQAAAACAAgAAQACAAQAAAADAAgAAQACAAQAAAAEAAgAAQACAAQAAAAFAAgAAQACAAQAAAAGAAgAAQACAAQAAAAHAAgAAQACAAQAAAAIAAgAAQACAAQAAAAJAAgAAQACAAQAAAAKAAgAAQACAAQAAAABAAkAAQABAAYAAAACAAkAAQABAAYAAAADAAkAAQABAAYAAAAEAAkAAQABAAYAAAAFAAkAAQABAAYAAAAGAAkAAQABAAYAAAAHAAkAAQABAAYAAAAIAAkAAQABAAYAAAAJAAkAAQABAAYAAAAKAAkAAQABAAYAAAABAAoAAQABAAcAAAACAAoAAQABAAcAAAADAAoAAQABAAcAAAAEAAoAAQABAAcAAAAFAAoAAQABAAcAAAAGAAoAAQABAAcAAAAHAAoAAQABAAcAAAAIAAoAAQABAAcAAAAJAAoAAQABAAcAAAAKAAoAAQABAAcAAAAKAAsAAQABAAcAAAAJAAsAAQABAAcAAAAIAAsAAQABAAcAAAAHAAsAAQABAAcAAAAGAAsAAQABAAcAAAAFAAsAAQABAAcAAAAEAAsAAQABAAcAAAADAAsAAQABAAcAAAACAAsAAQABAAcAAAABAAsAAQABAAcAAAABAAwAAQABAAcAAAACAAwAAQABAAcAAAADAAwAAQABAAcAAAAEAAwAAQABAAcAAAAFAAwAAQABAAcAAAAGAAwAAQABAAcAAAAHAAwAAQABAAcAAAAIAAwAAQABAAcAAAAJAAwAAQABAAcAAAAKAAwAAQABAAcAAAAKAA0AAQABAAcAAAAJAA0AAQABAAcAAAAIAA0AAQABAAcAAAAHAA0AAQABAAcAAAAGAA0AAQABAAcAAAAFAA0AAQABAAcAAAAEAA0AAQABAAcAAAADAA0AAQABAAcAAAACAA0AAQABAAcAAAABAA0AAQABAAcAAAABAA4AAQABAAcAAAACAA4AAQABAAcAAAADAA4AAQABAAcAAAAEAA4AAQABAAcAAAAFAA4AAQABAAcAAAAGAA4AAQABAAcAAAAHAA4AAQABAAcAAAAIAA4AAQABAAcAAAAJAA4AAQABAAcAAAAKAA4AAQABAAcAAAAKAA8AAQABAAcAAAAJAA8AAQABAAcAAAAIAA8AAQABAAcAAAAHAA8AAQABAAcAAAAGAA8AAQABAAcAAAAFAA8AAQABAAcAAAAEAA8AAQABAAcAAAADAA8AAQABAAcAAAACAA8AAQABAAcAAAABAA8AAQABAAcAAAABABAAAQABAAcAAAACABAAAQABAAcAAAADABAAAQABAAcAAAAEABAAAQABAAcAAAAFABAAAQABAAcAAAAGABAAAQABAAcAAAAHABAAAQABAAcAAAAIABAAAQABAAcAAAAJABAAAQABAAcAAAAKABAAAQABAAcAAAAKABEAAQABAAcAAAAJABEAAQABAAcAAAAIABEAAQABAAcAAAAHABEAAQABAAcAAAAGABEAAQABAAcAAAAFABEAAQABAAcAAAAEABEAAQABAAcAAAADABEAAQABAAcAAAACABEAAQABAAcAAAABABEAAQABAAcAAAABABIAAQABAAcAAAACABIAAQABAAcAAAADABIAAQABAAcAAAAEABIAAQABAAcAAAAFABIAAQABAAcAAAAGABIAAQABAAcAAAAHABIAAQABAAcAAAAIABIAAQABAAcAAAAJABIAAQABAAcAAAAKABIAAQABAAcAAAAKABMAAQABAAcAAAAJABMAAQABAAcAAAAIABMAAQABAAcAAAAHABMAAQABAAcAAAAGABMAAQABAAcAAAAFABMAAQABAAcAAAAEABMAAQABAAcAAAADABMAAQABAAcAAAACABMAAQABAAcAAAABABMAAQABAAcAAAABABQAAQABAAcAAAACABQAAQABAAcAAAADABQAAQABAAcAAAAEABQAAQABAAcAAAAFABQAAQABAAcAAAAGABQAAQABAAcAAAAHABQAAQABAAcAAAAIABQAAQABAAcAAAAJABQAAQABAAcAAAAKABQAAQABAAcAAAAKABUAAQABAAcAAAAJABUAAQABAAcAAAAIABUAAQABAAcAAAAHABUAAQABAAcAAAAGABUAAQABAAcAAAAFABUAAQABAAcAAAAEABUAAQABAAcAAAADABUAAQABAAcAAAACABUAAQABAAcAAAABABUAAQABAAcAAAABABYAAQABAAcAAAACABYAAQABAAcAAAADABYAAQABAAcAAAAEABYAAQABAAcAAAAFABYAAQABAAcAAAAGABYAAQABAAcAAAAHABYAAQABAAcAAAAIABYAAQABAAcAAAAJABYAAQABAAcAAAAKABYAAQABAAcAAAAKABcAAQABAAcAAAAJABcAAQABAAcAAAAIABcAAQABAAcAAAAHABcAAQABAAcAAAAGABcAAQABAAcAAAAFABcAAQABAAcAAAAEABcAAQABAAcAAAADABcAAQABAAcAAAACABcAAQABAAcAAAABABcAAQABAAcAAAA=")
tile_set = SubResource("TileSet_1dl7g")

[node name="Spawn" type="Area2D" parent="Playfield"]
position = Vector2(239, 571)

[node name="GameOver" type="CollisionShape2D" parent="Playfield/Spawn"]
position = Vector2(1, -491)
shape = SubResource("RectangleShape2D_jbctr")
debug_color = Color(1, 0, 0, 0.501961)

[node name="Matrix" type="StaticBody2D" parent="Playfield"]
position = Vector2(239, 571)

[node name="Floor" type="CollisionShape2D" parent="Playfield/Matrix"]
position = Vector2(1, 389)
shape = SubResource("WorldBoundaryShape2D_rfh87")

[node name="LeftWall" type="CollisionShape2D" parent="Playfield/Matrix"]
position = Vector2(-199, -11)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_bj5b2")

[node name="RightWall" type="CollisionShape2D" parent="Playfield/Matrix"]
position = Vector2(0, -11)
rotation = 4.71239
shape = SubResource("WorldBoundaryShape2D_5yxav")

[node name="Top" type="CollisionShape2D" parent="Playfield/Matrix"]
position = Vector2(1, -559)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_otkg8")

[node name="Hold" type="Label" parent="."]
offset_left = 512.0
offset_top = 64.0
offset_right = 608.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 25
text = "HOLD"
horizontal_alignment = 1

[node name="Stats" type="Label" parent="."]
offset_left = 1223.0
offset_top = 795.0
offset_right = 1484.0
offset_bottom = 946.0
theme_override_font_sizes/font_size = 25
text = "Score: 0000000
High score: 0000001
Lines cleared: 000
Level: 01/50"
horizontal_alignment = 1

[node name="Next" type="Label" parent="."]
offset_left = 1280.0
offset_top = 72.0
offset_right = 1440.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 25
text = "NEXT QUEUE"
horizontal_alignment = 1

[node name="Score log" type="Label" parent="."]
offset_left = 496.0
offset_top = 376.0
offset_right = 619.0
offset_bottom = 419.0
theme_override_font_sizes/font_size = 25
text = "Score Log"

[node name="I_polyblock" parent="." instance=ExtResource("3_t43ld")]
physics_interpolation_mode = 2
position = Vector2(960, 200)
disable_mode = 1
script = null

[node name="Z_polyblock" parent="." instance=ExtResource("4_gur0n")]
position = Vector2(1360, 240)
disable_mode = 1

[node name="Duo_block" parent="." instance=ExtResource("6_ko2oj")]
position = Vector2(1360, 440)
disable_mode = 1

[node name="J_polyblock" parent="." instance=ExtResource("7_sv651")]
position = Vector2(1360, 640)
rotation = 1.5708
disable_mode = 1
script = null

[node name="Pause" type="ConfirmationDialog" parent="."]
process_mode = 2
auto_translate_mode = 1
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
title = "PAUSED"
initial_position = 1
size = Vector2i(800, 320)
max_size = Vector2i(1920, 1080)
ok_button_text = "Quit"
dialog_text = "NOTE: you will forfeit all progress made with this game if you quit!"
dialog_autowrap = true
cancel_button_text = "Continue"

[node name="Game Over" type="Panel" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Message" type="Label" parent="Game Over"]
layout_mode = 0
offset_left = 720.0
offset_top = 480.0
offset_right = 1200.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "GAME OVER
Click anywhere to exit."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="canceled" from="Pause" to="." method="_on_pause_canceled"]
[connection signal="confirmed" from="Pause" to="." method="_on_pause_confirmed"]
[connection signal="gui_input" from="Game Over" to="." method="_on_game_over_gui_input"]
